css/style.css
/* Comment Standards */


/**
* Unwieldy CSS is no fun, so please follow this comment style guide
* to keep this document legible and sensible.
**/


/* ===================================================
   MAIN HEADINGS look like this - all caps, top and bottom comment bar
   =================================================== */


/*
   Section Headings Look Like This - capital case, no top comment bar
   =================================================== */


/**** Subsection 1 Headings Look Like This - capital case, 4 stars ****/


/**** Subsection 2 headings look like this - sentence case, 2 stars ****/


/* Single line comments look like this */


/**
* Multi-line comments look like this.
* Please try not to exceed 70 columns per line.
* Please follow the same indentations used here
*
* @FLAG can be used to highlight any specific issues that need attention
*
**/


/* ===================================================
   GLOBAL STYLES
   =================================================== */


/* 
   Global Layout
   =================================================== */

html,
body {
  height: 100vh;
  padding: 0;
  margin: 0;
}

body {
  padding-top: 0;
  line-height: 1.5rem;
}


/* 
   Typography
   =================================================== */


/**** Fluid Typography ****/

html {
  font-size: calc(0.875em + 0.25 * (100vw - 80em) / 40);
  font-size: -webkit-calc(87.5% + 0.25 * (100vw - 8000%) / 40);
}

h1 {
  font-size: 4.768rem;
}

h2 {
  font-size: 3.052rem;
}

h3 {
  font-size: 2.441rem;
}

h4 {
  font-size: 1.953rem;
}

h5 {
  font-size: 1.563rem;
}

h6 {
  font-size: 1.25rem;
}

p {
  font-size: 1rem;
}

li {
  font-size: 1rem;
}


/*
    @media screen and (min-width: 20rem) {
    html {
        font-size: calc(0.8rem + 1.2 * ((100vw - 20rem) / 30));
    }
    }

    @media screen and (min-width: 75rem) {
    html {
        font-size: 2rem;
    }
    }

    @media screen and (min-width: 75em) {
        html { font-size: 1.2em; }    
    }
    */


/* 
   Standard Page Header Section
   =================================================== */


/* Header */

header {
  height: 100vh;
  margin: 0;
  padding: 0;
}

header .header-banner-code,
header .header-banner-create,
header .header-banner-music,
header .header-banner-connect {
  width: 100%;
  height: 100vh;
  background-attachment: fixed;
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
}

header .header-banner-code {
  background-image: url("../img/plx-img1.jpeg");
}

header .header-banner-music {
  background-image: url("../img/boysinging.jpeg");
}

header .header-banner-create {
  background-image: url("../img/manlivesmoke.jpeg");
}

header .header-banner-contact {
  background-image: url("../img/");
  background-color: #fff;
  /*Fallback*/
}


/* Nav */

.nav-container {
  position: absolute;
  margin: 0 auto;
  top: 25%;
  left: 50%;
  width: 50%;
  height: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  text-align: center;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  -webkit-transition: width 0.7s, height 1s;
  -webkit-transition: width 0.7s, height 0.8s 0.1s;
  -webkit-transition: width 0.7s, height 0.1s 0.8s;
  -webkit-transition: width 0.7s;
  transition: width 0.7s;
  z-index: 1000;
}

.fixed-nav {
  position: fixed;
  top: 0;
  right: 0;
  width: 100%;
  height: 4rem;
  background: #333;
  -webkit-box-shadow: 0 2px 8px rgba(33, 33, 33, 0.6);
  box-shadow: 0 2px 8px rgba(33, 33, 33, 0.6);
  z-index: 20;
}

.logo {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 auto;
  color: #0A0;
  height: inherit;
  background: #333;
  opacity: 0;
  z-index: 0;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
}

.logo img {
  position: absolute;
  top: 10%;
  left: 4rem;
  height: 75%;
}

.logo.nav-top {
  opacity: 1;
}

.nav-links ul {
  margin: 0 auto;
  padding: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-around;
  list-style: none;
}

.nav-links li {
  position: relative;
}

.nav-links li a {
  text-decoration: none;
  color: #bbb;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.nav-links li a:hover {
  color: #fff;
}

.nav-links .active {
  color: rgb(34, 132, 255);
}

.nav-links .active:before {
  height: 0;
}

.nav-links li:before {
  content: "";
  position: absolute;
  margin-top: 0.8rem;
  margin-left: 0;
  width: 0;
  height: 0.5rem;
  z-index: -10;
  opacity: 0.7;
  -webkit-transition: all 0.6s ease-in-out;
  transition: all 0.6s ease-in-out;
}

.nav-links li:nth-of-type(1):before {
  background: skyblue;
}

.nav-links li:nth-of-type(2):before {
  background: limegreen;
}

.nav-links li:nth-of-type(3):before {
  background: darkorange;
}

.nav-links li:nth-of-type(4):before {
  background: rgb(34, 132, 255);
}

.nav-links li:hover:before {
  width: 4rem;
}

.title {
  position: relative;
  height: 4rem;
  display: table;
  text-transform: uppercase;
  letter-spacing: 0.2rem;
  margin: 0 auto;
  color: #fff;
  background: #333;
  z-index: 100;
  -webkit-box-shadow: 1px 2px 14px rgba(33, 33, 33, 0.8);
  box-shadow: 0 3px 5px rgba(33, 33, 33, 0.4);
}

.title.no-shadow {
  -webkit-box-shadow: none;
  box-shadow: none;
}

.nav-container:hover~.under-text span {
  background-color: #00ccff;
  color: #333;
  font-weight: 200;
}

.title h5 {
  display: table-cell;
  vertical-align: middle;
}

.nav-container nav {
  position: relative;
  margin: 0 auto;
  height: inherit;
  opacity: 0;
  z-index: 100;
  background: #333;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
}

.nav-container nav.nav-top {
  opacity: 1;
}
/* ... */

